Fixed the behaviour

--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
@@ -40,6 +40,8 @@
     text-align: center;
     line-height: 1.125;
     margin-bottom: 1rem;
+    font-size: 3rem;
+    overflow-wrap: break-word;
   }
 
   &__paragraph {
