--- a/src/app/features/portfolio/pages/impressum/impressum.component.html
+++ b/src/app/features/portfolio/pages/impressum/impressum.component.html
@@ -4,27 +4,41 @@
     <h1 class="impressum__primary-heading">Impressum</h1>
     <p class="impressum__paragraph" i18n>Angaben gemäß § 5 TMG</p>
     <p class="impressum__paragraph">
-      Tomke Nils Janowitz <br />
-      Hees 1 <br />
-      47652 Weeze
+      moveUP Media GmbH <br />
+      Toulouser Allee 15 <br />
+      40211 Düsseldorf
+    </p>
+    <p class="impressum__paragraph" i18n>
+      Handelsregister: HRB 106357<br />
+      Registergericht: Düsseldorf
     </p>
     <h2 class="impressum__secondary-heading" i18n>Vertreten durch:</h2>
-    <p class="impressum__paragraph" i18n>Tomke Nils Janowitz</p>
+    <p class="impressum__paragraph" i18n>Tomke Janowitz</p>
     <h2 class="impressum__secondary-heading" i18n>Kontakt:</h2>
     <p class="impressum__paragraph" i18n>
-      E-Mail:<a href="mailto:kontakt@tomke-nils.de">kontakt@tomke-nils.de</a>
+      E-Mail: <a href="mailto:kontakt@tomke-nils.de">kontakt@tomke-nils.de</a>
+    </p>
+    <p class="impressum__paragraph" i18n>
+      Umsatzsteuer-Identifikationsnummer gemäß § 27 a Umsatzsteuergesetz:
+      DE331165289
+    </p>
+    <h2 class="impressum__secondary-heading" i18n>EU-Streitschlichtung</h2>
+    <p class="impressum__paragraph" i18n>
+      Die Europäische Kommission stellt eine Plattform zur
+      Online-Streitbeilegung (OS) bereit:
+      <a href="https://ec.europa.eu/consumers/odr/" target="_blank"
+        >https://ec.europa.eu/consumers/odr/</a
+      >.<br />
+      Unsere E-Mail-Adresse finden Sie oben im Impressum.
     </p>
     <h2 class="impressum__secondary-heading" i18n>
-      Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
+      Verbraucherstreitbeilegung/Universalschlichtungsstelle
     </h2>
-    <p class="impressum__paragraph">
-      Tomke Nils Janowitz<br />
-      Hees 1<br />
-      47652 Weeze
+    <p class="impressum__paragraph" i18n>
+      Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor
+      einer Verbraucherschlichtungsstelle teilzunehmen.
     </p>
-
-    <h2 class="impressum__secondary-heading" i18n>Haftungsausschluss:</h2>
-    <h3 class="impressum__tertiary-heading" i18n>Haftung für Inhalte</h3>
+    <h2 class="impressum__secondary-heading" i18n>Haftung für Inhalte</h2>
     <p class="impressum__paragraph" i18n>
       Die Inhalte meiner Seiten wurden mit größter Sorgfalt erstellt. Für die
       Richtigkeit, Vollständigkeit und Aktualität der Inhalte kann ich jedoch
@@ -40,7 +54,7 @@
       von entsprechenden Rechtsverletzungen werde ich diese Inhalte umgehend
       entfernen.
     </p>
-    <h3 class="impressum__tertiary-heading" i18n>Haftung für Links</h3>
+    <h2 class="impressum__secondary-heading" i18n>Haftung für Links</h2>
     <p class="impressum__paragraph" i18n>
       Mein Angebot enthält Links zu externen Webseiten Dritter, auf deren
       Inhalte ich keinen Einfluss habe. Deshalb kann ich für diese fremden
@@ -53,7 +67,7 @@
       einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von
       Rechtsverletzungen werde ich derartige Links umgehend entfernen.
     </p>
-    <h3 class="impressum__tertiary-heading" i18n>Urheberrecht</h3>
+    <h2 class="impressum__secondary-heading" i18n>Urheberrecht</h2>
     <p class="impressum__paragraph" i18n>
       Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen
       Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung,
