Fixed localization issue

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,8 +1,8 @@
 <footer class="section footer">
   <div class="container">
     <div class="footer__links-container">
-      <a href="/impressum" class="footer__link" i18n> Impressum </a>
-      <a href="/data-privacy" class="footer__link" i18n> Datenschutz </a>
+      <a routerLink="/impressum" class="footer__link" i18n> Impressum </a>
+      <a routerLink="/data-privacy" class="footer__link" i18n> Datenschutz </a>
     </div>
     <div class="footer__icons-container">
       <a routerLink="/">
